# application/routers/router.go
@@ -29,6 +29,7 @@ func InitRouter() *gin.Engine {
 		apiV1.GET("/hello", v1.Hello)
 		apiV1.POST("/queryAccountList", v1.QueryAccountList)
 		apiV1.POST("/createRealEstate", v1.CreateRealEstate)
+		apiV1.POST("/queryRealEstateList", v1.QueryRealEstateList)
 	}
 	return r
 }
